# ipapc

./: Cargo.toml  README.md
.github/workflows/: benchmarks.yml
benches/: amortization.rs  benchmark_parametric.rs  benchmark_simple.rs  iai_bench.rs
dev/bench/: data.js
src/: amortization.rs  challenges.rs  commit.rs  fft.rs  homomorphism.rs  lib.rs  open.rs  prove.rs  tests.rs  utils.rs  verify.rs
