[package]
name = "ipapc"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
ark-ec = "0.3"
rand = {version = "0.8", optional = true, features = ["min_const_gen"]}
blake3  = {version = "1.3"}
ark-serialize = "0.3"
ark-pallas = "0.3"

[features]
default = ["rand"]
test = []

[dev-dependencies]
criterion = "0.3"
iai = "0.1"

[[bench]]
name = "benchmark_parametric"
harness = false

[[bench]]
name = "benchmark_simple"
harness = false

[[bench]]
name = "amortization"
harness = false

[[bench]]
name = "iai_bench"
harness = false

[lib]
bench = false
